Fix spacing

--- a/app/components/Post/style.scss
+++ b/app/components/Post/style.scss
@@ -2,6 +2,10 @@
 
 .Post {
   margin-bottom: 20px;
+  h2 a {
+    text-decoration: none;
+    color: inherit;
+  }
   .body {
     display: flex;
   }
