--- a/app/containers/App/style.scss
+++ b/app/containers/App/style.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   #siteContent {
     flex: 1;
+    margin-top: 57px;
   }
 
 }
